<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

    <PreferenceCategory app:title="Settings">

        <SwitchPreferenceCompat
            app:key="location_access"
            app:title="@string/enable_location_access" />

        <SwitchPreferenceCompat
            app:key="app_notification"
            app:summaryOff="@string/not_allow_app_notification"
            app:summaryOn="@string/allow_app_notification"
            app:title="@string/enable_app_notifications" />

    </PreferenceCategory>

</PreferenceScreen>