<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.SignUpFragment"
    android:background="#9903A9F4">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".5"
        android:scaleType="centerCrop"
        android:src="@drawable/bannerimage4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/person_face_move" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing=".2"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/light_blue"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/anim"
                app:layout_constraintStart_toStartOf="@+id/anim"
                app:layout_constraintTop_toBottomOf="@+id/anim" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@color/light_blue"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="@+id/tv"
                app:layout_constraintStart_toStartOf="@+id/tv"
                app:layout_constraintTop_toBottomOf="@+id/tv"
                app:placeholderText="@string/enter_first_name"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@color/light_blue"
                app:errorTextColor="@color/error"
                app:errorEnabled="true"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="@+id/firstNameTIL"
                app:layout_constraintStart_toStartOf="@+id/firstNameTIL"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTIL"
                app:placeholderText="@string/enter_last_name"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@color/light_blue"
                app:errorTextColor="@color/error"
                app:errorEnabled="true"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="@+id/lastNameTIL"
                app:layout_constraintStart_toStartOf="@+id/lastNameTIL"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTIL"
                app:placeholderText="@string/enter_your_valid_email"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/error"
                app:boxStrokeColor="@color/light_blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="@+id/emailTIL"
                app:layout_constraintStart_toStartOf="@+id/emailTIL"
                app:layout_constraintTop_toBottomOf="@+id/emailTIL"
                app:passwordToggleEnabled="true"
                app:placeholderText="@string/enter_your_password"
                app:startIconDrawable="@drawable/ic_lock_person"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textColorHint="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorMessageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:textColor="@color/light_blue"
                app:layout_constraintStart_toStartOf="@+id/passwordTIL"
                app:layout_constraintTop_toBottomOf="@+id/passwordTIL" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing=".3"
                android:text="@string/sign_up"
                android:layout_marginTop="5dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
                app:layout_constraintStart_toStartOf="@+id/passwordTIL"
                app:layout_constraintTop_toBottomOf="@+id/errorMessageTv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="Back To Login"
                android:textColor="@color/dark_pink"
                android:layout_marginTop="5dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
                app:layout_constraintStart_toStartOf="@+id/signUpBtn"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
                app:strokeColor="@color/light_pink"
                app:strokeWidth="1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
