<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9903A9F4"
    tools:context=".ui.forgetpassword.ForgetPasswordFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".5"
        android:scaleType="centerCrop"
        android:src="@drawable/bannerimage4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alpha=".89"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lock_circle" />

            <TextView
                android:id="@+id/forgetTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing=".1"
                android:text="@string/forget_your_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/anim"
                app:layout_constraintStart_toStartOf="@+id/anim"
                app:layout_constraintTop_toBottomOf="@+id/anim" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:letterSpacing=".1"
                android:text="@string/forget_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_blue"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/forgetTv"
                app:layout_constraintStart_toStartOf="@+id/forgetTv"
                app:layout_constraintTop_toBottomOf="@+id/forgetTv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/light_blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="@+id/slogan"
                app:layout_constraintStart_toStartOf="@+id/slogan"
                app:layout_constraintTop_toBottomOf="@+id/slogan"
                app:placeholderText="@string/enter_your_valid_email"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgetBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/send_reset_link"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/emailTIL"
                app:layout_constraintStart_toStartOf="@+id/emailTIL"
                app:layout_constraintTop_toBottomOf="@+id/emailTIL" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>